[gd_scene load_steps=7 format=3 uid="uid://gca4hqx3mgb6"]

[ext_resource type="Script" path="res://gates/andGate/andGate.gd" id="1_unvjo"]
[ext_resource type="Texture2D" uid="uid://bxyu2pj5s04dj" path="res://textures/offAnd.svg" id="2_ao7l4"]
[ext_resource type="PackedScene" uid="uid://e1021yg63ils" path="res://inputConnector/inputConnector.tscn" id="3_jyrps"]
[ext_resource type="PackedScene" uid="uid://cl8liesiq3ocl" path="res://outputConnector/outputConnector.tscn" id="3_xr0cb"]
[ext_resource type="PackedScene" uid="uid://bdbsw85gp6bkx" path="res://gates/ui_pop_out.tscn" id="5_rng10"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_570in"]
size = Vector2(120, 120)

[node name="RigidBody2D" type="RigidBody2D" groups=["pickable"]]
input_pickable = true
mass = 0.01
gravity_scale = 0.0
freeze = true
freeze_mode = 1
script = ExtResource("1_unvjo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ao7l4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_570in")
debug_color = Color(0.364706, 0.607843, 0.313726, 0.419608)

[node name="inputConnector" parent="." instance=ExtResource("3_jyrps")]
position = Vector2(-70, 22)

[node name="inputConnector2" parent="." instance=ExtResource("3_jyrps")]
position = Vector2(-70, -22)

[node name="outputConnector" parent="." instance=ExtResource("3_xr0cb")]
position = Vector2(70, 0)

[node name="uiPopOut" parent="." instance=ExtResource("5_rng10")]
offset_left = -23.9055
offset_top = 65.0348
offset_right = -23.9055
offset_bottom = 65.0348
